clusters/lab/apps/authentik/postgresql.yaml
# apps/authentik/postgresql.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pg
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pg
  template:
    metadata:
      labels:
        app: pg
    spec:
      containers:
      - name: postgres
        image: postgres:13-alpine
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: data
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: postgresql-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: authentik-postgresql
  namespace: authentik
spec:
  clusterIP: None
  selector:
    app: pg
  ports:
    - name: postgresql
      port: 5432
      targetPort: 5432

# ---
# apiVersion: apps/v1
# kind: StatefulSet
# metadata:
#   name: authentik-postgresql
#   namespace: authentik
# spec:
#   serviceName: authentik-postgresql
#   replicas: 1
#   selector:
#     matchLabels:
#       app: authentik-postgresql
#   template:
#     metadata:
#       labels:
#         app: authentik-postgresql
#     spec:
#       containers:
#         - name: postgresql
#           image: postgres:13-alpine
#           ports:
#             - containerPort: 5432
#           env:
#             - name: POSTGRES_DB
#               value: authentik
#             - name: POSTGRES_USER
#               value: postgres
#             - name: POSTGRES_PASSWORD
#               valueFrom:
#                 secretKeyRef:
#                   name: authentik-postgresql-secret
#                   key: password
#           volumeMounts:
#             - name: data
#               mountPath: /var/lib/postgresql/data
#   volumeClaimTemplates:
#     - metadata:
#         name: data
#       spec:
#         accessModes: ["ReadWriteOnce"]
#         resources:
#           requests:
#             storage: 10Gi
#
